src/test/resources/purescript_examples/failing/ConflictingQualifiedImports2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ScopeConflict\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSProperNameImpl(ImportModuleName)
          PsiElement(module)('module')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('X')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('X')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('B')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PsiElement(as)('as')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('X')
          PsiElement(whitespace)('\n')
